--- a/about.html
+++ b/about.html
@@ -26,4 +26,8 @@
       This website contains a few samples of my artwork from recent years.
     </p>
   </section>
+
+<footer>
+  &copy; 2025 Jayna Roberts | All Rights Reserved
+</footer>
 </body>
