--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 Jayna Doe. All rights reserved. Email and phone icons sourced from flaticon.com. Background from Pexels.com</p>
+      <p>&copy; 2025 Jayna Roberts. All rights reserved. Email and phone icons sourced from flaticon.com./p>
     </footer>
   </div>
 </body>
