--- a/resume.html
+++ b/resume.html
@@ -24,17 +24,17 @@
       <h1>Jayna Roberts</h1>
       <p class="contact-info">
         <a href="mailto:seekjayna@gmail.com" class="contact-link">
-          <img src="email_logo.png" alt="Email" class="contact-icon">
+          <img src="images/email_logo.png" alt="Email" class="contact-icon">
         seekjayna@gmail.com  
       </a>
        | 
         <a href="tel:5098189154" class="contact-link">
-          <img src="phone_logo.png" alt="Phone" class="contact-icon">
+          <img src="images/phone_logo.png" alt="Phone" class="contact-icon">
         (509)818-9154  
       </a>
        | 
       <a href="https://linkedin.com" class="contact-link">
-        <img src="linkedin_logo.png" alt="LinkedIn" class="contact-icon">
+        <img src="images/linkedin_logo.png" alt="LinkedIn" class="contact-icon">
       LinkedIn
       </a>  
       <p class="contact-info"> GitHub: github.com/jrober15</p>
